[project]
name = "fuzzy-matcher"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
    "levenshtein>=0.26.1",
    "pandas>=2.2.3",
    "streamlit>=1.42.2",
]
description = "Levenshtein Distance Matcher"
license = "MIT"

[dependency-groups]
dev = ["pytest-cov>=6.0.0", "pytest-mock>=3.14.0"]

[tool.ruff]
extend-ignore = ["F401"]
