[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzy-matcher"
version = "0.5.1"
requires-python = ">=3.11"
dependencies = ["levenshtein>=0.26.1", "pandas>=2.2.3", "streamlit>=1.42.2"]
description = "Levenshtein Distance Matcher"
license = "MIT"

[dependency-groups]
dev = ["pytest-cov>=6.0.0", "pytest-mock>=3.14.0", "ruff>=0.12.12"]

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # bugbear
    "C4",  # comprehensions
    "TID", # tidy imports
    "G",   # lazy logging
    "PTH", # pathlib
    "D",   # docstring style
]
ignore = []
unfixable = [
    "F401", # unused imports
]
